--- a/examples/15-style.css
+++ b/examples/15-style.css
@@ -1,11 +1,8 @@
-p {
+main {
   color: green;
-}
-
-p {
-  color: red;
-}
-
-body {
-  color: blue;
+  font-family: monospace;
+  font-size: 36px;
+  margin: 50px;
+  border: 1px solid black;
+  padding: 50px;
 }
