--- a/examples/16.css
+++ b/examples/16.css
@@ -1,4 +1,10 @@
 body {
-  width: 960px
+  width: 960px;
   margin: 0 auto;
+  font-size: 24px;
+}
+
+h2 a {
+  color: black;
+  text-decoration: none;
 }
