Update example styles

--- a/examples/16.css
+++ b/examples/16.css
@@ -2,9 +2,33 @@ body {
   width: 960px;
   margin: 0 auto;
   font-size: 24px;
+  font-weight: 200;
+  line-height: 1.6;
+}
+
+p {
+  padding: 5px;
 }
 
 h2 a {
   color: black;
   text-decoration: none;
+}
+
+img, pre {
+  border: 1px solid #ccc;
+  padding: 1em;
+  overflow: scroll;
+}
+
+h1, h2 {
+  font-weight: 200;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 32px;
 }
