--- a/examples/16.css
+++ b/examples/16.css
@@ -1,6 +1,6 @@
 body {
   max-width: 720px;
-  margin: 0 auto; 
+  margin: 0 auto;
   font-size: 20px;
   font-weight: 200;
 }
@@ -17,7 +17,8 @@ h3 {
   font-size: 24px;
 }
 
-h2 a, h3 a {
+h2 a,
+h3 a {
   color: black;
   text-decoration: none;
 }
